mdmCeneveo/src/objects/Name_Mapping_Configurations__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Name Mapping Configurations</relationshipLabel>
        <relationshipName>Name_Mapping_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_System__c</fullName>
        <label>Business Units</label>
        <picklist>
            <picklistValues>
                <fullName>Envelop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merrimack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acclaim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapped_Name__c</fullName>
        <label>Mapped Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Product</label>
        <referenceTo>Plant_Products__c</referenceTo>
        <relationshipLabel>Name Mapping Configurations</relationshipLabel>
        <relationshipName>Name_Mapping_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Name__c</fullName>
        <label>SFDC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Product Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Account Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Name_Mapping_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Name Mapping Configuration</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>SFDC_Name__c</columns>
        <columns>Mapped_Name__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NMC-{00000000}</displayFormat>
        <label>Name Mapping Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Name Mapping Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISNULL(TEXT(Type__c)), ISBLANK(TEXT(Type__c)))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You must enter a value.</errorMessage>
    </validationRules>
</CustomObject>